WIP: add route to return locations by proximity
